--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <a class="nav-link" href="#"><img src="img/searchicon.png" alt=""></a>
                             </li>
                             <li class="nav-item my-4 me- ">
-                                <button class="btn  registerBtn">Contact Us</button>
+                                <button class="btn  registerBtn pointer">Contact Us</button>
                             </li>
                         </ul>
 
@@ -44,52 +44,59 @@
             </nav>
         </div>
     </div>
-    <div class="container">
-        <div class="row   justify-content-sm-center herorow">
-            <div class="col-lg-6 col-sm-12  ps-lg-5 mt-sm-5 pt-5 headcollef">
-                <div class="bgimg"></div>
-                <p class="bold text-white">Featured Post</p>
+    <div class="container-fluid herorow ">
+        <div class="container">
+            <div class="row   justify-content-sm-center ">
+                <div class="col-lg-6 col-sm-12  ps-lg-5 mt-sm-5 pt-5 headcollef">
+                    <div class="bgimg"></div>
+                    <p class="bold text-white">Featured Post</p>
 
-                <h1 class="bold w-75 my-5 text-white">
-                    How AI will Change the Future
-                </h1>
-                <p class="colorgray w-75 my-4 mb-5 text-white">
-                    The future of AI will see home robots having enhanced intelligence, increased capabilities, and
-                    becoming more personal and possibly cute. For example, home robots will overcome navigation,
-                    direction
-                </p>
-                <button class="btn text-dark bg-white rounded  registerBtn">Read More</button>
-            </div>
-            <div class="col-lg-6 col-sm-12  mt-lg-5 py-5 mb-5">
-                <img src="img/heroright.png" width="90%" alt="">
-            </div>
-
-        </div>
-
-
-        <div class="row menimg">
-            <div class="col-11 mx-auto mt-5">
-                <img src="img/mens image.png" class="w-100" height="95%" alt="">
-            </div>
-
-        </div>
-        <div class="row ">
-            <div class="col-9 rounded ms-md-auto menrow menrow-lg bg-white p-4">
-                <div class=" w-50 d-flex ">
-                    <p class="bold">DEVELOPMENT</p>
-                    <p class="colorgray ms-lg-4 ms-md-2">16 March 2023</p>
+                    <h1 class="bold w-75 my-5 text-white">
+                        How AI will Change the Future
+                    </h1>
+                    <p class="colorgray w-75 my-4 mb-5 text-white">
+                        The future of AI will see home robots having enhanced intelligence, increased capabilities, and
+                        becoming more personal and possibly cute. For example, home robots will overcome navigation,
+                        direction
+                    </p>
+                    <button class="btn text-dark bg-white rounded  registerBtn pointer">Read More</button>
                 </div>
-                <h1 class="bold my-lg-3 my-md-2">
-                    How to make a Game look more attractive with New VR & AI Technology
-                </h1>
-                <p class="colorgray">
-                    Google has been investing in AI for many years and bringing its benefits to individuals,
-                    businesses and communities. Whether it’s publishing state-of-the-art research, building helpful
-                    products or developing tools and resources that enable others, we’re committed to making AI
-                    accessible to everyone.
+                <div class="col-lg-6 col-sm-12  mt-lg-5 py-5 mb-5">
+                    <img src="img/heroright.png" width="90%" alt="">
+                </div>
 
-                </p>
-                <button class="btn colorpurple bg-white my-lg-5 my-md-2  rounded  registerBtn">Read More</button>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+
+        <div class="men-1-row mt-5">
+
+            <div class="row menimg">
+                <div class="col-11 mx-auto mt-5">
+                    <img src="img/mens image.png" class="w-100" height="95%" alt="">
+                </div>
+
+            </div>
+            <div class="row ">
+                <div class="col-9 rounded ms-md-auto menrow menrow-lg bg-white p-4">
+                    <div class=" w-50 d-flex ">
+                        <p class="bold">DEVELOPMENT</p>
+                        <p class="colorgray ms-lg-4 ms-md-2">16 March 2023</p>
+                    </div>
+                    <h1 class="bold my-lg-3 my-md-2">
+                        How to make a Game look more attractive with New VR & AI Technology
+                    </h1>
+                    <p class="colorgray">
+                        Google has been investing in AI for many years and bringing its benefits to individuals,
+                        businesses and communities. Whether it’s publishing state-of-the-art research, building helpful
+                        products or developing tools and resources that enable others, we’re committed to making AI
+                        accessible to everyone.
+
+                    </p>
+                    <button class="btn colorpurple bg-white my-lg-5 my-md-2  rounded pointer  registerBtn">Read
+                        More</button>
+                </div>
             </div>
         </div>
         <div class="card menrow-sm p-4 mt-5">
@@ -107,18 +114,18 @@
                     products or developing tools and resources that enable others, we’re committed to making AI
                     accessible to everyone.
                 </p>
-                <button class="btn colorpurple bg-white mt-5   rounded  registerBtn">Read More</button>
+                <button class="btn colorpurple bg-white mt-5 pointer   rounded  registerBtn">Read More</button>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-12 d-flex  justify-content-between mt-md-0 mb-md-5 mt-sm-5">
-                <h1 class="bold">Our Recent Post</h1>
-                <button class="btn  registerBtn">View All</button>
+        <div class="row Recent">
+            <div class="col-12 d-flex  justify-content-between my-5">
+                <h1 class="bold ">Our Recent Post</h1>
+                <button class=" pointer  registerBtn">View All</button>
             </div>
         </div>
 
-        <div class="row   justify-content-sm-center mt-4 men-2-row">
+        <div class="row my-5  justify-content-sm-center mt-4 men-2-row">
             <div class="col-lg-6   ">
                 <img src="img/mens image.png" width="100%" height="90%" alt="">
             </div>
@@ -137,20 +144,10 @@
                     accessible to everyone.
 
                 </p>
-                <button class="btn colorpurple bg-white my-lg-5   rounded  registerBtn">Read More</button>
+                <button class="btn colorpurple bg-white my-lg-5 rounded pointer  registerBtn">Read More</button>
             </div>
 
         </div>
-
-
-
-
-
-
-
-
-
-
 
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -165,7 +162,8 @@
                         <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages of
                             transporting
                             goods by sea include: you can ship large volumes at costs </p>
-                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read More...</small>
+                        <p class="card-text"><small class="text-body-secondary colorpurple pointer readmore bold">Read
+                                More...</small>
                         </p>
                     </div>
 
@@ -173,7 +171,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <img src="img/Image Placeholder (1).svg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -184,7 +182,7 @@
                             of
                             transporting
                             goods by sea include: you can ship large volumes at costs </p>
-                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                        <p class="card-text"><small class="text-body-secondary colorpurple pointer readmore bold">Read
                                 More...</small></p>
                     </div>
 
@@ -192,7 +190,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <img src="img/Image Placeholder (2).svg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -203,7 +201,7 @@
                             advantages of
                             transporting
                             goods by sea include: you can ship large volumes at costs </p>
-                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                        <p class="card-text"><small class="text-body-secondary colorpurple pointer readmore bold">Read
                                 More...</small></p>
                     </div>
 
@@ -213,13 +211,13 @@
 
         </div>
 
-          <div class="row my-5">
+        <div class="row my-5">
             <div class="col-12">
                 <h1 class="bold">Popular Post</h1>
             </div>
-          </div>
+        </div>
 
-           <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card">
                     <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
@@ -232,7 +230,8 @@
                         <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages of
                             transporting
                             goods by sea include: you can ship large volumes at costs </p>
-                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read More...</small>
+                        <p class="card-text"><small class="text-body-secondary colorpurple  bold readmore">Read
+                                More...</small>
                         </p>
                     </div>
 
@@ -240,7 +239,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <img src="img/Image Placeholder (1).svg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -251,7 +250,7 @@
                             of
                             transporting
                             goods by sea include: you can ship large volumes at costs </p>
-                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                        <p class="card-text"><small class="text-body-secondary colorpurple  readmore bold">Read
                                 More...</small></p>
                     </div>
 
@@ -259,7 +258,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <img src="img/Image Placeholder (2).svg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -270,7 +269,7 @@
                             advantages of
                             transporting
                             goods by sea include: you can ship large volumes at costs </p>
-                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                        <p class="card-text "><small class="text-body-secondary colorpurple  readmore bold">Read
                                 More...</small></p>
                     </div>
 
@@ -281,7 +280,7 @@
         </div>
 
 
-         <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
             <div class="col">
                 <div class="card">
                     <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
@@ -294,7 +293,8 @@
                         <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages of
                             transporting
                             goods by sea include: you can ship large volumes at costs </p>
-                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read More...</small>
+                        <p class="card-text"><small class="text-body-secondary colorpurple pointer readmore bold">Read
+                                More...</small>
                         </p>
                     </div>
 
@@ -302,7 +302,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <img src="img/Image Placeholder (1).svg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -313,7 +313,7 @@
                             of
                             transporting
                             goods by sea include: you can ship large volumes at costs </p>
-                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                        <p class="card-text"><small class="text-body-secondary colorpurple pointer readmore bold">Read
                                 More...</small></p>
                     </div>
 
@@ -321,7 +321,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <img src="img/Image Placeholder (2).svg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -332,7 +332,7 @@
                             advantages of
                             transporting
                             goods by sea include: you can ship large volumes at costs </p>
-                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                        <p class="card-text"><small class="text-body-secondary colorpurple pointer readmore bold">Read
                                 More...</small></p>
                     </div>
 
@@ -342,25 +342,65 @@
 
         </div>
 
+    </div>
 
+    <div class="container-fluid herorow">
+        <div class="container">
+            <div class="row story py-3 mt-5">
+                <div class="bgimg storybg"></div>
+                <div class="col-12 d-flex flex-column align-items-center py-5">
+                    <h1 class="text-white w-75 text-center">Get our stories delivered From us to your inbox weekly.</h1>
+                    <div class="storyinp  d-flex align-items-center justify-content-between my-4">
+                        <input type="text" placeholder="Your Email" class="rounded py-2 pe-5 ps-2 ">
+                        <button class="btn text-white py-2  px-3 rounded pointer bold "><small>Get
+                                Started</small></button>
+                    </div>
+                    <p class="colorgray w-50 text-center">Get a response tomorrow if you submit by 9pm today. If we
+                        received after 9pm will get a reponse the following day.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center mt-5">
+                <img src="img/logo.png" alt="">
+                
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="ftul">
+                    <ul class="d-flex justify-content-between mx-auto my-4 ">
+                        <li class="text-dark ">Home</li>
+                        <li class="text-dark ">Blog</li>
+                        <li class="text-dark ">About</li>
+                        <li class="text-dark ">Contact Us</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="d-flex justify-content-between mx-auto ft-plat-icon-main" >
+                <div class="ft-plat-icon d-flex align-items-center justify-content-center text-white text-center bold rounded-circle "> FB</div>
+                <div class="ft-plat-icon d-flex align-items-center justify-content-center text-white text-center bold rounded-circle ">IG</div>
+                <div class="ft-plat-icon d-flex align-items-center justify-content-center text-white text-center bold rounded-circle "> LN</div>
+                <div class="ft-plat-icon d-flex align-items-center justify-content-center text-white text-center bold rounded-circle "> YT</div>
+                </div>
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col-lg-10 col-sm-12 ft-line mx-auto my-5">
 
+            </div>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <footer class="row">
+            <div class="col-12 text-center mb-5">Copyright Ideapeel Inc © 2023. All Right Reserved</div>
+        </footer>
 
 
 
@@ -381,7 +421,7 @@
 
     </div>
 
-
+    
 
 
 
