--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <img src="img/Container.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -239,7 +239,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder (1).svg" class="card-img-top" alt="...">
+                    <img src="img/Container (1).png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -258,7 +258,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder (2).svg" class="card-img-top" alt="...">
+                    <img src="img/Container (2).png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -283,7 +283,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <img src="img/Container (3).png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -302,7 +302,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder (1).svg" class="card-img-top" alt="...">
+                    <img src="img/Container (4).png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
@@ -321,7 +321,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="img/Image Placeholder (2).svg" class="card-img-top" alt="...">
+                    <img src="img/container(5).png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="  d-flex ">
                             <p class="bold">Travel</p>
